The buttons will change their color to white and background to black  when they are hover and active. When only active, the outline will be a black solid 1px line. Each button is going to be aligned in its correct direction.

--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,24 @@ header:hover {
     background-color: rgb(0, 0, 0, .1);
 }
 
+.carousel-button:hover,
+.carousel-button:active {
+    color: white;
+    background-color: rgb(0, 0, 0, .2);
+}
+
+.carousel-button:active {
+    outline: 1px solid black;
+}
+
+.carousel-button.left {
+    left: 1rem;
+}
+
+.carousel-button.right {
+    right: 1rem;
+}
+
 .slide {
     position: absolute;
     inset: 0;
